<resources>
    <string name="app_name">RWP</string>
    <string name="registration">Регистрация</string>
    <string name="sign_in">Войти</string>
    <string name="rwp">Read, watch, play</string>
    <string name="how_reg">Как вы хотите зарегистрироваться?</string>
    <string name="reg_with_google">С помощью Google</string>
    <string name="reg_with_email">С помощью email</string>
    <string name="didreg">Уже зарегистрированы?</string>
    <string name="how_sign_in">Как вы хотите войти?</string>
    <string name="didnotreg">Еще не зарегестрированы?</string>
    <string name="reg">Зарегестрироваться</string>
    <string name="guest">Войти как гость</string>
    <string name="with_number">По номеру телефона</string>
    <string name="password">Пароль</string>
    <string name="email">Email</string>
    <string name="password_again">Введите пароль еще раз</string>
    <string name="phone_number">Номер телефона</string>
    <string name="code">Введите код</string>
    <string name="get_code">Получить код</string>
    <string name="books">Books</string>
    <string name="films">Films</string>
    <string name="games">Games</string>
    <string name="profile">Profile</string>
    <string name="edit_profile">Редактировать профиль</string>
    <string name="phone">Номер телефона:</string>
    <string name="email_prof">Email:</string>
</resources>