<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationFragment">

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/back"
        android:layout_margin="10dp"
        android:id="@+id/back"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/how_sign_in"
            android:textSize="30sp"
            android:gravity="center"
            android:layout_margin="20dp"
            style="@style/BoldTextStyle"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:id="@+id/sign_in_with_google">
            <ImageView
                android:id="@+id/google"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/google"
                android:layout_margin="20dp"
                android:layout_alignParentStart="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reg_with_google"
                android:layout_toEndOf="@id/google"
                android:layout_centerVertical="true"
                android:textSize="18sp"/>

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/forward"
                android:layout_margin="20dp"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@android:color/darker_gray"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:id="@+id/sign_in_with_email">
            <ImageView
                android:id="@+id/email"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/email"
                android:layout_margin="20dp"
                android:layout_alignParentStart="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reg_with_email"
                android:layout_toEndOf="@id/email"
                android:layout_centerVertical="true"
                android:textSize="18sp"/>

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/forward"
                android:layout_margin="20dp"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/didnotreg"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:textSize="25sp"
            style="@style/BoldTextStyle" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/reg"
            android:text="@string/reg"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            style="@style/ButtonTextStyle" />
    </LinearLayout>

</FrameLayout>